# bambutop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RUST_BEST_PRACTICES.md
.beads/: issues.jsonl
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
aur/: .SRCINFO  PKGBUILD
src/: app.rs  config.rs  demo.rs  main.rs  mqtt.rs  notifications.rs  printer.rs  wizard.rs
src/ui/: aggregate.rs  common.rs  controls.rs  header.rs  help.rs  mod.rs  progress.rs  status.rs  temps.rs  toast.rs
