[package]
name = "bambutop"
version = "0.1.0"
edition = "2021"
description = "Terminal-based status monitor for Bambu Labs printers"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# MQTT
rumqttc = "0.24"
rustls = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"
dirs = "5"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
