[package]
name = "bambutop"
version = "0.4.0"
edition = "2021"
description = "Terminal-based status monitor for Bambu Labs printers"
license = "MIT"

[dependencies]
# TUI (minimal features)
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", default-features = false, features = ["events"] }

# Async runtime (minimal features - rumqttc adds net/io-util transitively)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# MQTT
rumqttc = "0.24"
rustls = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"
dirs = "5"

# CLI (disable color/suggestions to reduce binary size)
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }

# Error handling
anyhow = "1"

# Optimization
smallvec = "1.13"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true
codegen-units = 1
strip = true
panic = "abort"
